cmake_minimum_required(VERSION 3.20)
project(lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab2 main.cpp Figure.cpp Figure.h Square.cpp Square.h Circle.cpp Circle.h Employee.cpp Employee.h Developer.cpp Developer.h TeamLeader.cpp TeamLeader.h Bufor.cpp Bufor.h MeanBufor.cpp MeanBufor.h MaxBufor.cpp MaxBufor.h)
